--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -22,8 +22,8 @@
     "    filter_git_dirty=False,\n",
     "    date_filter='> \\'2021-03-28 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
-    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%_logit_%%.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%yanghitscore.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
@@ -51,10 +51,23 @@
     "    \n",
     "    return acc / len(cm)\n",
     "\n",
+    "def compute_f1(cm):\n",
+    "    def cm_f1(matrix):\n",
+    "        tn, fp, fn, tp = np.array(matrix).ravel()\n",
+    "        \n",
+    "        return (2 * tp) / (2 * tp + fp + fn)\n",
+    "    \n",
+    "    f1 = 0\n",
+    "    for m in cm:\n",
+    "        f1 += cm_f1(m)\n",
+    "    \n",
+    "    return f1 / len(cm)\n",
+    "\n",
     "for _, row in results.iterrows():\n",
     "    acc = row['mean'].loc['multilabel_confusion_matrix'].apply(compute_acc)\n",
+    "    f1 = row['mean'].loc['multilabel_confusion_matrix'].apply(compute_f1)\n",
     "#     print(row['id'], row['sourcefile'], acc)\n",
-    "    print(row['id'], row['sourcefile'], acc.max().round(3))\n",
+    "    print(row['id'], row['sourcefile'], f'acc: {acc.max().round(3)}', f'f1: {f1.max().round(3)}')\n",
     "#     print(row['mean'].max(axis=1))\n",
     "#     print(row['mean'].loc['multilabel_confusion_matrix'][-1])"
    ]
