--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -21,8 +21,8 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/lastfm%%_ab_%%_all%%.py\\''],\n",
-    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/clean%%_ab_%%_all%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/clean%%_ab_%%_all%%.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/lastfm%%_ab_%%_all%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -70,13 +70,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
+    "# display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
+    "display(best_results[['approach', 'spearmanr', 'kendalltau']])\n",
     "\n",
+    "# display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
+    "# display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
     "\n",
-    "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
-    "\n",
-    "display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
+    "# display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Wide and Deep Spearman Correlation', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'kendalltau']].plot.bar(x='approach', y='kendalltau', title='Wide and Deep Kendall Correlation', figsize=(12, 6)))"
    ]
