--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -23,7 +23,7 @@
     "    date_filter='> \\'2021-03-28 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%yanghitscore.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%%%yanghitscore.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
