--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -20,10 +20,10 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=False,\n",
-    "    date_filter='> \\'2021-03-28 14:00:00\\'',\n",
+    "    date_filter='> \\'2021-08-04 16:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%%%yanghitscore.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/hspd/binary%%_ab_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/binary%%%%yanghitscore.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
