--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -21,7 +21,8 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression%%_ab_%%_all%%.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_lastfm_%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
