--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -19,11 +19,11 @@
     "results = get_results_as_dataframe(\n",
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
-    "    filter_git_dirty=False,\n",
+    "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "#     filters=['sourcefile LIKE \\'plans/hspd/binary%%_ab_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_lastfm%%yanghitscore.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/hspd/%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_cleaned_melspect%%.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
