--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -22,7 +22,7 @@
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_lastfm_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_cleaned_mel%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -50,7 +50,7 @@
     "best_results['mae'] = best_results['neg_mean_absolute_error']\n",
     "best_results['meae'] = best_results['neg_median_absolute_error']\n",
     "best_results['rmse'] = best_results['neg_mean_squared_error'].pow(1./2)\n",
-    "best_results = best_results.sort_values(by=['approach'])"
+    "best_results = best_results.sort_values(by=['sourcefile'])"
    ]
   },
   {
@@ -70,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "best_results['approach'] = best_results['approach'].apply(lambda v: v.replace('mean_std', 'ms'))\n",
     "# display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
     "display(best_results[['approach', 'spearmanr', 'kendalltau']])\n",
     "\n",
@@ -77,8 +78,8 @@
     "# display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
     "\n",
     "# display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Wide and Deep Spearman Correlation', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'kendalltau']].plot.bar(x='approach', y='kendalltau', title='Wide and Deep Kendall Correlation', figsize=(12, 6)))"
+    "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Spearman Correlation', figsize=(12, 6)))\n",
+    "display(best_results[['approach', 'kendalltau']].plot.bar(x='approach', y='kendalltau', title='Kendall Correlation', figsize=(12, 6)))"
    ]
   }
  ],
