--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -23,7 +23,7 @@
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_cleaned_melspect%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_%%_melspect%%fcn%%.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
