--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -22,7 +22,7 @@
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_cleaned_mel%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_%%_mel%%fcn%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
