--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -20,10 +20,10 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
+    "    date_filter='> \\'2021-08-19 13:20:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_%%_melspect%%fcn%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/binary_class_%%_melspect%%.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
