--- a/notebooks/hspd/list_of_features.ipynb
+++ b/notebooks/hspd/list_of_features.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "virgin-modem",
+   "cell_type": "markdown",
+   "id": "polar-spider",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# HSPd\n",
     "\n",
@@ -15,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-desire",
+   "id": "ruled-publisher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inner-quarterly",
+   "id": "hollywood-studio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +80,36 @@
     "            ess_cleaned_features = set(columns)\n",
     "            \n",
     "display(ess_cleaned_features - ess_lfm_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "prime-bikini",
+   "metadata": {},
+   "source": [
+    "## Mel-Spects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "olympic-disclaimer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from librosa import power_to_db\n",
+    "\n",
+    "data = pd.read_pickle('../../data/hit_song_prediction_lastfm/sample/msd_lastfm_matches_melspect_features_unique.pickle.sample.pickle')\n",
+    "data['librosa_melspectrogram_db'] = data['librosa_melspectrogram'].apply(power_to_db)\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "sns.set(rc={\"figure.figsize\":(30, 12)})\n",
+    "\n",
+    "for i in range(5):\n",
+    "    sns.heatmap(data['librosa_melspectrogram'].iloc[i])\n",
+    "    plt.show()"
    ]
   }
  ],
