--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -18,11 +18,11 @@
     "results = get_results_as_dataframe(\n",
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
-    "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
+    "    filter_git_dirty=False,\n",
+    "    date_filter='> \\'2021-08-19 13:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_%%_mel%%fcn%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_%%_mel%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
