--- a/notebooks/hspd/cnn_sizes.ipynb
+++ b/notebooks/hspd/cnn_sizes.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "derived-genealogy",
+   "id": "taken-valley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,64 +13,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boring-estonia",
+   "id": "emotional-incidence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_shape = (4, 128, 1296, 1)\n",
+    "input_shape = (4, 128, 1200, 1)\n",
     "x = tf.random.normal(input_shape)\n",
     "\n",
     "display('block 1')\n",
-    "layer_size = (3, 3)\n",
-    "y = tf.keras.layers.Conv2D(64, layer_size, activation='relu', input_shape=input_shape[1:], padding='same')(x)\n",
+    "layer_size = (128, 4)\n",
+    "y = tf.keras.layers.Conv2D(32, layer_size, activation='relu', input_shape=input_shape[1:])(x)\n",
     "display(y.shape)\n",
-    "y = tf.keras.layers.MaxPool2D(pool_size=(2, 4))(y)\n",
+    "y = tf.keras.layers.MaxPool2D(pool_size=(1, 4))(y)\n",
     "display(y.shape)\n",
     "\n",
     "display('block 2')\n",
-    "# layer_size = (1, 4)\n",
-    "y = tf.keras.layers.Conv2D(128, layer_size, activation='relu', padding='same')(y)\n",
+    "layer_size = (1, 4)\n",
+    "y = tf.keras.layers.Conv2D(32, layer_size, activation='relu')(y)\n",
     "display(y.shape)\n",
-    "y = tf.keras.layers.MaxPool2D(pool_size=(2, 4))(y)\n",
+    "y = tf.keras.layers.MaxPool2D(pool_size=(1, 4))(y)\n",
     "display(y.shape)\n",
     "\n",
-    "display('block 3')\n",
+    "# display('block 3')\n",
     "# layer_size = (1, 3)\n",
-    "y = tf.keras.layers.Conv2D(128, layer_size, activation='relu', padding='same')(y)\n",
-    "display(y.shape)\n",
-    "y = tf.keras.layers.MaxPool2D(pool_size=(2, 4))(y)\n",
-    "display(y.shape)\n",
+    "# y = tf.keras.layers.Conv2D(32, layer_size, layer_size, activation='relu')(y)\n",
+    "# display(y.shape)\n",
+    "# y = tf.keras.layers.MaxPool2D(pool_size=(1, 3))(y)\n",
+    "# display(y.shape)\n",
     "\n",
     "display('block 4')\n",
-    "# layer_size = y.shape[1:3]\n",
-    "y = tf.keras.layers.Conv2D(128, layer_size, activation='relu', padding='same')(y)\n",
+    "layer_size = y.shape[1:3]\n",
+    "y = tf.keras.layers.Conv2D(512, layer_size, layer_size, activation='relu')(y)\n",
     "display(y.shape)\n",
-    "y = tf.keras.layers.MaxPool2D(pool_size=(3, 5))(y)\n",
+    "# y = tf.keras.layers.MaxPool2D(pool_size=(1, 2))(y)\n",
     "display(y.shape)\n",
     "\n",
     "display('block 5')\n",
-    "# layer_size = (1, 1)\n",
-    "y = tf.keras.layers.Conv2D(64, layer_size, activation='relu', padding='same')(y)\n",
+    "layer_size = (1, 1)\n",
+    "y = tf.keras.layers.Conv2D(512, layer_size, layer_size, activation='relu')(y)\n",
     "display(y.shape)\n",
-    "y = tf.keras.layers.MaxPool2D(pool_size=(4, 4))(y)\n",
+    "# y = tf.keras.layers.MaxPool2D(pool_size=(1, 2))(y)\n",
     "display(y.shape)\n",
     "\n",
-    "# display('block 6')\n",
-    "# # layer_size = (1, 1)\n",
-    "# y = tf.keras.layers.Conv2D(1, layer_size, activation='relu')(y)\n",
-    "# display(y.shape)\n",
+    "display('block 6')\n",
+    "layer_size = (1, 1)\n",
+    "y = tf.keras.layers.Conv2D(1, layer_size, layer_size, activation='relu')(y)\n",
+    "display(y.shape)\n",
     "# y = tf.keras.layers.MaxPool2D(pool_size=(1, 2))(y)\n",
-    "# display(y.shape)\n",
+    "display(y.shape)\n",
     "\n",
     "display('flatten')\n",
-    "y = tf.keras.layers.Dense(1)(y)\n",
+    "y = tf.keras.layers.Flatten()(y)\n",
     "display(y.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cellular-litigation",
+   "id": "anticipated-drove",
    "metadata": {},
    "outputs": [],
    "source": [
