--- a/notebooks/hspd/list_of_features.ipynb
+++ b/notebooks/hspd/list_of_features.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "polar-spider",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "productive-ferry",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# HSPd\n",
     "\n",
@@ -13,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ruled-publisher",
+   "id": "designing-quality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollywood-studio",
+   "id": "marine-vertical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,33 +85,120 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "prime-bikini",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "numerical-motorcycle",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Mel-Spects"
+    "data = pd.read_parquet('../../data/hit_song_prediction_ismir2020/processed/msd_bb_mbid_cleaned_matches_ab_unique.parquet')\n",
+    "\n",
+    "matches = pd.read_csv('../../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_cleaned_matches.csv')[['uuid', 'msd_id']]\n",
+    "non_matches = pd.read_csv('../../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olympic-disclaimer",
+   "id": "immediate-banks",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from librosa import power_to_db\n",
+    "mapping = pd.concat([matches[['uuid', 'msd_id']], non_matches[['uuid', 'msd_id']]]).drop_duplicates()\n",
     "\n",
-    "data = pd.read_pickle('../../data/hit_song_prediction_lastfm/sample/msd_lastfm_matches_melspect_features_unique.pickle.sample.pickle')\n",
-    "data['librosa_melspectrogram_db'] = data['librosa_melspectrogram'].apply(power_to_db)\n",
+    "msd_year = pd.read_csv('../../data/millionsongdataset/additional_files/tracks_per_year.txt', sep='<SEP>', names=['year', 'msd_id', 'artist', 'title'])[['year', 'msd_id']]\n",
     "\n",
-    "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt\n",
+    "mapping_year = mapping.merge(msd_year, on=['msd_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "analyzed-duplicate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "sns.set(rc={\"figure.figsize\":(30, 12)})\n",
+    "uuid_year = mapping_year[['uuid', 'year']].groupby(by='uuid').agg(lambda x : x.max() == x.min())\n",
+    "uuid_year = uuid_year[uuid_year['year']].reset_index()[['uuid']]\n",
     "\n",
-    "for i in range(5):\n",
-    "    sns.heatmap(data['librosa_melspectrogram'].iloc[i])\n",
-    "    plt.show()"
+    "display(uuid_year.shape, uuid_year[['uuid']].drop_duplicates().shape)\n",
+    "\n",
+    "\n",
+    "cor_year = uuid_year[['uuid']].drop_duplicates().merge(mapping_year[['uuid', 'year']].drop_duplicates(), on=['uuid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "turned-order",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.shape, data.merge(cor_year, on=['uuid']).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "metric-hobby",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some = mapping_year[['uuid', 'year']].groupby(by='uuid').agg([lambda x : x.max() == x.min(), np.min, np.max])\n",
+    "some[some[('year', '<lambda_0>')] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "muslim-prime",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lfm = pd.read_parquet('../../data/hit_song_prediction_lastfm/processed/msd_lastfm_matches_ab_unique.parquet')\n",
+    "matches_lfm = pd.read_csv('../../data/hit_song_prediction_lastfm/interim/msd_lastfm_matches.csv')[['uuid', 'msd_id']].drop_duplicates()\n",
+    "\n",
+    "mapping_year_lfm = matches_lfm.merge(msd_year, on=['msd_id'])\n",
+    "\n",
+    "uuid_year_lfm = mapping_year_lfm[['uuid', 'year']].groupby(by='uuid').agg(lambda x : x.max() == x.min())\n",
+    "uuid_year_lfm = uuid_year_lfm[uuid_year_lfm['year']].reset_index()[['uuid']]\n",
+    "\n",
+    "display(uuid_year_lfm.shape, uuid_year_lfm.drop_duplicates().shape)\n",
+    "\n",
+    "\n",
+    "cor_year_lfm = uuid_year_lfm[['uuid']].drop_duplicates().merge(mapping_year_lfm[['uuid', 'year']].drop_duplicates(), on=['uuid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "convertible-production",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lfm.shape, data_lfm.merge(cor_year_lfm, on=['uuid']).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "selective-journal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lfm.shape, data_lfm['uuid'].drop_duplicates().shape, cor_year_lfm.shape, cor_year_lfm.drop_duplicates().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eleven-treat",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lfm[['lastfm_playcount', 'lastfm_listener_count']], data[['lastfm_playcount', 'lastfm_listener_count']]"
    ]
   }
  ],
@@ -129,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
