--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -19,10 +19,10 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-07-09 13:20:00\\'',\n",
+    "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_cleaned_ab%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_%%_mel%%fcn%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -72,7 +72,7 @@
    "source": [
     "best_results['approach'] = best_results['approach'].apply(lambda v: v.replace('mean_std', 'ms'))\n",
     "# display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
-    "display(best_results[['approach', 'spearmanr', 'kendalltau', 'rmse']])\n",
+    "display(best_results[['approach', 'spearmanr', 'kendalltau']])\n",
     "\n",
     "# display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
     "# display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
