--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "interim-rehabilitation",
+   "id": "sealed-spyware",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "knowing-kernel",
+   "id": "particular-assist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,10 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='BETWEEN \\'2021-04-07 14:00:00\\' AND \\'2021-04-13 17:00:00\\'',\n",
+    "#     date_filter='BETWEEN \\'2021-04-07 14:00:00\\' AND \\'2021-04-13 17:00:00\\'',\n",
+    "    date_filter='>= \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%lfmlc.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%ordinal_one_hot_all_lfmlc.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -42,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atomic-image",
+   "id": "coupled-pendant",
    "metadata": {},
    "outputs": [],
    "source": [
