--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -22,7 +22,7 @@
     "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_%%_mel%%fcn%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hspd/regression_cleaned%%_%%all_yanghitscore.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -80,6 +80,54 @@
     "# display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Spearman Correlation', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'kendalltau']].plot.bar(x='approach', y='kendalltau', title='Kendall Correlation', figsize=(12, 6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_names = list(filter(lambda e: e.startswith('split-'), result2.index))\n",
+    "\n",
+    "splits1 = []\n",
+    "for split in split_names:\n",
+    "    splits1.append(results.iloc[1][split]['1'].loc['spearmanr'])\n",
+    "\n",
+    "splits2 = []\n",
+    "for split in split_names:\n",
+    "    splits2.append(results.iloc[4][split]['300'].loc['spearmanr'])\n",
+    "    \n",
+    "num_samples = 10**4\n",
+    "sample_size = 50\n",
+    "    \n",
+    "sample_means1 = []\n",
+    "for _ in range(num_samples):\n",
+    "    sample_mean = np.random.choice(splits1, size=sample_size).mean()\n",
+    "    sample_means1.append(sample_mean)\n",
+    "    \n",
+    "sample_means2 = []\n",
+    "for _ in range(num_samples):\n",
+    "    sample_mean = np.random.choice(splits2, size=sample_size).mean()\n",
+    "    sample_means2.append(sample_mean)\n",
+    "    \n",
+    "print(splits1)\n",
+    "print(splits2)\n",
+    "\n",
+    "print('0.4326', '0.4393', '', sep='\\n')\n",
+    "print(np.mean(sample_means1))\n",
+    "print(np.mean(sample_means2))\n",
+    "    \n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set(color_codes=True)\n",
+    "sns.set(rc={'figure.figsize': (20,10)})\n",
+    "plt.title('Bootstrap', fontsize='25')\n",
+    "plt.xlabel('Score', fontsize='20')\n",
+    "plt.ylabel('Score Frequency', fontsize='20')\n",
+    "sns.distplot(sample_means1)\n",
+    "sns.distplot(sample_means2)\n",
+    "plt.show()"
    ]
   }
  ],
