--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -88,18 +88,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_names = list(filter(lambda e: e.startswith('split-'), result2.index))\n",
+    "split_names = list(filter(lambda e: e.startswith('split-'), best_results.iloc[0].index))\n",
     "\n",
     "splits1 = []\n",
     "for split in split_names:\n",
-    "    splits1.append(results.iloc[1][split]['1'].loc['spearmanr'])\n",
+    "    splits1.append(results.iloc[3][split]['1'].loc['spearmanr'])\n",
     "\n",
     "splits2 = []\n",
     "for split in split_names:\n",
     "    splits2.append(results.iloc[4][split]['300'].loc['spearmanr'])\n",
     "    \n",
     "num_samples = 10**4\n",
-    "sample_size = 50\n",
+    "sample_size = len(split_names)\n",
     "    \n",
     "sample_means1 = []\n",
     "for _ in range(num_samples):\n",
@@ -128,6 +128,47 @@
     "sns.distplot(sample_means1)\n",
     "sns.distplot(sample_means2)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splits_delta = np.array(splits1) - np.array(splits2)\n",
+    "\n",
+    "means_delta = []\n",
+    "for _ in range(num_samples):\n",
+    "    sample_mean = np.random.choice(splits_delta, size=sample_size).mean()\n",
+    "    means_delta.append(sample_mean)\n",
+    "    \n",
+    "sns.set(color_codes=True)\n",
+    "sns.set(rc={'figure.figsize': (20,10)})\n",
+    "plt.title('Bootstrap', fontsize='25')\n",
+    "plt.xlabel('Score', fontsize='20')\n",
+    "plt.ylabel('Score Frequency', fontsize='20')\n",
+    "sns.distplot(means_delta)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "alpha = 0.95\n",
+    "\n",
+    "ordered_means_delta = np.sort(means_delta)\n",
+    "lower = np.percentile(ordered_means_delta, ((1-alpha)/2)*100)\n",
+    "upper = np.percentile(ordered_means_delta, (alpha+(1-alpha)/2)*100)\n",
+    "print(lower, np.mean(ordered_means_delta), upper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import wilcoxon\n",
+    "\n",
+    "wilcoxon(splits1, splits2)"
    ]
   }
  ],
