--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "splits1 = []\n",
     "for split in split_names:\n",
-    "    splits1.append(results.iloc[3][split]['1'].loc['spearmanr'])\n",
+    "    splits1.append(results.iloc[2][split]['1'].loc['spearmanr'])\n",
     "\n",
     "splits2 = []\n",
     "for split in split_names:\n",
@@ -157,7 +157,7 @@
     "ordered_means_delta = np.sort(means_delta)\n",
     "lower = np.percentile(ordered_means_delta, ((1-alpha)/2)*100)\n",
     "upper = np.percentile(ordered_means_delta, (alpha+(1-alpha)/2)*100)\n",
-    "print(lower, np.mean(ordered_means_delta), upper)"
+    "print(\"low:\", lower, \"mean:\", np.mean(ordered_means_delta), \"high:\", upper)"
    ]
   },
   {
@@ -166,10 +166,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import wilcoxon\n",
+    "from scipy import stats\n",
     "\n",
-    "wilcoxon(splits1, splits2)"
+    "print(splits1)\n",
+    "print(splits2)\n",
+    "print()\n",
+    "\n",
+    "s1 = []\n",
+    "s2 = []\n",
+    "\n",
+    "num_samples = 25\n",
+    "\n",
+    "for _ in range(num_samples):\n",
+    "    sample_mean = np.random.choice(splits1, size=len(splits1)).mean()\n",
+    "    s1.append(sample_mean)\n",
+    "    \n",
+    "    sample_mean = np.random.choice(splits2, size=len(splits2)).mean()\n",
+    "    s2.append(sample_mean)\n",
+    "\n",
+    "s1 = splits1\n",
+    "s2 = splits2\n",
+    "\n",
+    "for f in [stats.wilcoxon, stats.ttest_rel, stats.ttest_ind, stats.ks_2samp, stats.epps_singleton_2samp]:\n",
+    "    print(f(s1, s2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
